@@ -3,11 +3,7 @@ package com.nabilaitnacer.portalusermanager.domain;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.stream.Collectors;
-
 import static java.util.Arrays.stream;
 
 
@@ -20,7 +16,7 @@ public class UserPrincipal implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return stream(this.user.getAuthorities()).map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+        return stream(this.user.getAuthorities()).map(SimpleGrantedAuthority::new).map(GrantedAuthority.class::cast).toList();
     }
 
     @Override
